--- a/release.json
+++ b/release.json
@@ -1,7 +1,7 @@
 {
-  "md5": "de9b3e612200039733d01488e2ac9761",
-  "release_notes": "https://github.com/arnold2957/dnaas/releases/tag/1.0.25",
+  "release_date": "2025-11-11 09:12:35",
   "version": "1.0.25",
-  "release_date": "2025-11-11 09:11:25",
-  "download_url": "https://github.com/arnold2957/dnaas/releases/download/1.0.25/dnaas.zip"
+  "md5": "cdb8b3842244b82b2a8b2ba8c34f1b10",
+  "download_url": "https://github.com/arnold2957/dnaas/releases/download/1.0.25/dnaas.zip",
+  "release_notes": "https://github.com/arnold2957/dnaas/releases/tag/1.0.25"
 }
