deploy: 79a15bb9b76954a62c21fea5c9ff7578dbc4ee88

--- a/release.json
+++ b/release.json
@@ -1,7 +1,7 @@
 {
-  "release_notes": "https://github.com/arnold2957/dnaas/releases/tag/1.0.26",
-  "download_url": "https://github.com/arnold2957/dnaas/releases/download/1.0.26/dnaas.zip",
-  "release_date": "2025-11-12 15:56:17",
+  "download_url": "https://github.com/arnold2957/dnaas/releases/download/1.0.26/dnaas_v1.0.26.zip",
   "version": "1.0.26",
-  "md5": "0573edc2f691e2ff2af7f40fd2c1d020"
+  "release_date": "2025-11-12 16:24:55",
+  "md5": "431cac26a32217af93d94630e171d477",
+  "release_notes": "https://github.com/arnold2957/dnaas/releases/tag/1.0.26"
 }
