--- a/release.json
+++ b/release.json
@@ -1,7 +1,7 @@
 {
-  "download_url": "https://github.com/arnold2957/dnaas/releases/download/1.0.27/dnaas_v1.0.27.zip",
-  "release_date": "2025-11-13 17:31:49",
-  "md5": "0e8fbfcff05e9e2bd889b70c78567ce1",
-  "release_notes": "https://github.com/arnold2957/dnaas/releases/tag/1.0.27",
-  "version": "1.0.27"
+  "download_url": "https://github.com/arnold2957/dnaas/releases/download/1.0.28/dnaas_v1.0.28.zip",
+  "version": "1.0.28",
+  "release_notes": "https://github.com/arnold2957/dnaas/releases/tag/1.0.28",
+  "md5": "4c63cf727c32442f965b367ea8e1d2d5",
+  "release_date": "2025-11-14 09:10:38"
 }
