--- a/release.json
+++ b/release.json
@@ -1,7 +1,7 @@
 {
-  "release_date": "2025-11-15 17:11:18",
-  "md5": "6a3ee5fd5228a9f283a9cadfd8a3f1da",
-  "release_notes": "https://github.com/arnold2957/dnaas/releases/tag/1.0.29",
-  "download_url": "https://github.com/arnold2957/dnaas/releases/download/1.0.29/dnaas_v1.0.29.zip",
-  "version": "1.0.29"
+  "version": "1.0.30",
+  "md5": "ab14f85404e4dcc490baeeadec9f7fa0",
+  "release_notes": "https://github.com/arnold2957/dnaas/releases/tag/1.0.30",
+  "release_date": "2025-11-16 17:02:32",
+  "download_url": "https://github.com/arnold2957/dnaas/releases/download/1.0.30/dnaas_v1.0.30.zip"
 }
