--- a/release.json
+++ b/release.json
@@ -1,7 +1,7 @@
 {
-  "version": "1.0.30",
-  "md5": "ab14f85404e4dcc490baeeadec9f7fa0",
-  "release_notes": "https://github.com/arnold2957/dnaas/releases/tag/1.0.30",
-  "release_date": "2025-11-16 17:02:32",
-  "download_url": "https://github.com/arnold2957/dnaas/releases/download/1.0.30/dnaas_v1.0.30.zip"
+  "release_notes": "https://github.com/arnold2957/dnaas/releases/tag/1.0.31",
+  "download_url": "https://github.com/arnold2957/dnaas/releases/download/1.0.31/dnaas_v1.0.31.zip",
+  "release_date": "2025-11-18 03:34:12",
+  "md5": "1ad7871de249e24aa5f55c887d0d06f2",
+  "version": "1.0.31"
 }
