deploy: cb4913cbb1519b5d0b59ad02a90b37d4333d6f4b

--- a/release.json
+++ b/release.json
@@ -1,7 +1,7 @@
 {
+  "release_notes": "https://github.com/arnold2957/dnaas/releases/tag/1.0.32",
+  "release_date": "2025-11-20 14:10:36",
   "version": "1.0.32",
-  "download_url": "https://github.com/arnold2957/dnaas/releases/download/1.0.32/dnaas_v1.0.32.zip",
-  "md5": "6e7a3207a2d363e2ed23c452a229c4eb",
-  "release_date": "2025-11-20 14:08:38",
-  "release_notes": "https://github.com/arnold2957/dnaas/releases/tag/1.0.32"
+  "md5": "89f5dad0ae6b82bdc329e0beba64416a",
+  "download_url": "https://github.com/arnold2957/dnaas/releases/download/1.0.32/dnaas_v1.0.32.zip"
 }
